# elements

./: .gitignore  Cargo.toml
assets/models/: notebook.glb  notebook.gltf  page.glb
assets/raw_files/: notebook.blend  notebook.blend1  page.xcf
assets/shaders/: drawable_shader.wgsl
src/: camera_controller.rs  drawable.rs  drawable_material.rs  main.rs  notebook.rs
src/drawable/: drawable.rs  drawable_builder.rs  drawable_material.rs  mod.rs
src/drawable/drawable_image/: mod.rs
src/drawable/paint/: mod.rs  paint.rs  paint_input.rs
src/drawable/paint/drawing_util/: antialias_thick_line.rs  mod.rs  objects.rs  single_line.rs  thick_line.rs
src/gui/: button.rs  gui_menu.rs  main_menu.rs  mod.rs
src/hook/: hook.rs  mod.rs
src/notebook/: mod.rs  page.rs
src/scene_hook/: hook.rs
