[package]
name = "elements"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.bevy]
version = "0.15.0"
features = ["bevy_mesh_picking_backend"]

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
